--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Exens Ai",
-  "name": "Exens Ai"
+  "name": "Exens Ai",
   "description": "Decentralised naming for wallets, websites, & more.",
   "iconPath": "android-chrome-144x144.png",
   "icons": [
